@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: January 30, 2010</p>
+      <p>Last Updated: March 14, 2010</p>
     </td>
   </tr>
 </table>
@@ -1688,6 +1688,9 @@ nuttx-5.2 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* arch/arm/src/sam3u/sam3u_pio.c - Fix an address calculation error
 	  that caused ports B & C to get mapped to the PIOA base address.
 	  This is an important bugfix! (a patch is available)
+	* arch/arm/src/lpc313x/lpc313x_boot.c - Fix an error in the vector
+	  initialization was causing a memory fault.
+	* lib/lib_strtod.c - Add strtod()
 
 pascal-2.1 2010-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
